Refactoring with Sonarlint